fixed project structure and fixed stop words url