@@ -6,68 +6,65 @@ import org.apache.hadoop.mapreduce.Mapper;
 import org.apache.hadoop.mapreduce.Reducer;
 import org.apache.hadoop.mapreduce.lib.input.FileInputFormat;
 import org.apache.hadoop.mapreduce.lib.output.FileOutputFormat;
-import utils.DecadesPartitioner;
 
 import java.io.IOException;
 import java.util.LinkedList;
 import java.util.List;
 
-public class Step3 {
+public class Step2 {
 
     private static Path inputPath;
     private static Path outputPath;
-    private static Double minPmi;
 
-    private static final int W1_VALUE_INDEX = 0;
-    private static final int W2_VALUE_INDEX = 1;
+    private static final int W1_INDEX = 0;
+    private static final int W2_INDEX = 1;
+    private static final int COUNT_OVERALL_INDEX = 3;
+    private static final int BIGRAM_COUNT_IN_DECADE = 4;
 
     /**
      * emits the following format:
-     *      decade,w1,w2 -> w1,w2,count_overall,bigram_count_in_decade,w1_count_in_decade,_,
-     *      or
-     *      decade,w1,w2 -> w1,w2,count_overall,bigram_count_in_decade,_,w2_count_in_decade
+     *     decade,w1,_ -> w1,w2,count_overall,bigram_count_in_decade
+     *     decade,_,w2 -> w1,w2,count_overall,bigram_count_in_decade
      */
-    public static class NPMIMapper extends Mapper<Text, Text, Text, Text> {
+    public static class C_W_Mapper extends Mapper<Text, Text, Text, Text> {
 
-        private static final int DECADE_KEY_INDEX = 0;
+        private String[] tokens;
 
         @Override
         protected void map(Text key, Text value, Mapper<Text, Text, Text, Text>.Context context) throws IOException, InterruptedException {
-            String[] valueTokens = value.toString().split(",");
-            String[] keyTokens = key.toString().split(",");
-            String w1 = valueTokens[W1_VALUE_INDEX];
-            String w2 = valueTokens[W2_VALUE_INDEX];
-            context.write(new Text(String.format("%s,%s,%s", keyTokens[DECADE_KEY_INDEX], w1, w2)), value);
+              String[] valueTokens = value.toString().split(",");
+              String w1 = valueTokens[W1_INDEX];
+              String w2 = valueTokens[W2_INDEX];
+              String countOverall = valueTokens[COUNT_OVERALL_INDEX];
+              String bigramCountInDecade = valueTokens[BIGRAM_COUNT_IN_DECADE];
+              String valueOut = String.format("%s,%s,%s,%s", w1, w2, countOverall, bigramCountInDecade);
+              context.write(new Text(String.format("%s,%s,_", key, w1)), new Text(valueOut));
+              context.write(new Text(String.format("%s,_,%s", key, w2)), new Text(valueOut));
+            }
         }
-    }
 
     /**
      * emits the following format:
-     *      decade,w1,w2 -> w1,w2,npmi
+     *      decade,w1,_ -> w1,w2,count_overall,bigram_count_in_decade,w1_count_in_decade,_
+     *      or
+     *      decade,_,w2 -> w1,w2,count_overall,bigram_count_in_decade,_,w2_count_in_decade
      */
-    public class NPMIReducer extends Reducer<Text, Text, Text, Text> {
+    public static class C_W_Reducer extends Reducer<Text, Text, Text, Text> {
+
+        private static final int W1_KEY_INDEX = 1;
+        private static final int W2_KEY_INDEX = 2;
         private static final int W1_VALUE_INDEX = 0;
         private static final int W2_VALUE_INDEX = 1;
         private static final int COUNT_OVERALL_VALUE_INDEX = 2;
         private static final int BIGRAM_COUNT_IN_DECADE_INDEX = 3;
-        private static final int W1_COUNT_IN_DECADE_INDEX = 4;
-        private static final int W2_COUNT_IN_DECADE_INDEX = 5;
-        private double minPmi;
-
-        @Override
-        protected void setup(Reducer<Text, Text, Text, Text>.Context context) throws IOException, InterruptedException {
-            minPmi = Double.parseDouble(context.getConfiguration().get("minPmi"));
-        }
 
         @Override
         protected void reduce(Text key, Iterable<Text> values, Reducer<Text, Text, Text, Text>.Context context) throws IOException, InterruptedException {
             String[] keyTokens = key.toString().split(",");
-            int w1Count = 0;
-            int w2Count = 0;
+            int wCount = 0;
             for (Text value : values) {
                 String[] valueTokens = value.toString().split(",");
-                w1Count += valueTokens[W1_COUNT_IN_DECADE_INDEX].equals("_") ? 0 : Integer.parseInt(valueTokens[W1_COUNT_IN_DECADE_INDEX]);
-                w2Count += valueTokens[W2_COUNT_IN_DECADE_INDEX].equals("_") ? 0 : Integer.parseInt(valueTokens[W2_COUNT_IN_DECADE_INDEX]);
+                wCount += Integer.parseInt(valueTokens[COUNT_OVERALL_VALUE_INDEX]);
             }
             for(Text value : values) {
                 String[] valueTokens = value.toString().split(",");
@@ -75,35 +72,24 @@ public class Step3 {
                 String w2 = valueTokens[W2_VALUE_INDEX];
                 String countOverall = valueTokens[COUNT_OVERALL_VALUE_INDEX];
                 String bigramCountInDecade = valueTokens[BIGRAM_COUNT_IN_DECADE_INDEX];
-                double npmi = calculateNPMI(countOverall, bigramCountInDecade, w1Count, w2Count);
-                if (npmi < minPmi) {
-                    continue;
-                }
-                context.write(key, new Text("%s,%s,%s".formatted(w1,w2,String.valueOf(npmi))));
+                String valueOut = String.format("%s,%s,%s,%s,%s,%s",
+                        w1, w2, countOverall, bigramCountInDecade,
+                        keyTokens[W1_KEY_INDEX].equals("_") ? "_" : wCount,
+                        keyTokens[W2_KEY_INDEX].equals("_") ? "_" : wCount);
+                context.write(key, new Text(valueOut));
             }
         }
-
-        private double calculateNPMI(String countOverall, String bigramCountInDecade, int w1Count, int w2Count) {
-            double c_w1_w2 = Double.parseDouble(countOverall);
-            double c_w1 = w1Count;
-            double c_w2 = w2Count;
-            double N = Double.parseDouble(bigramCountInDecade);
-            double pmi = Math.log(c_w1_w2) + Math.log(N) - Math.log(c_w1) - Math.log(c_w2);
-            return -1 * pmi / Math.log(c_w1_w2 / N);
-        }
     }
-
     public static void main(String[] args){
-        System.out.println("[DEBUG] STEP 3 started!");
+        System.out.println("[DEBUG] STEP 2 started!");
         readArgs(args);
         Configuration conf = new Configuration();
-        conf.set("minPmi", String.valueOf(minPmi));
         try {
-            Job job = Job.getInstance(conf, "Step3");
-            job.setJarByClass(Step3.class);
-            job.setMapperClass(Step3.NPMIMapper.class);
+            Job job = Job.getInstance(conf, "Step2");
+            job.setJarByClass(Step2.class);
+            job.setMapperClass(Step2.C_W_Mapper.class);
             job.setPartitionerClass(DecadesPartitioner.class);
-            job.setReducerClass(Step3.NPMIReducer.class);
+            job.setReducerClass(Step2.C_W_Reducer.class);
             job.setMapOutputKeyClass(Text.class);
             job.setMapOutputValueClass(Text.class);
             job.setOutputKeyClass(Text.class);
@@ -117,37 +103,12 @@ public class Step3 {
     }
 
     private static void readArgs(String[] args) {
-        minPmi = -1.0;
         List<String> argsList = new LinkedList<>();
-        argsList.add("-minpmi");
         argsList.add("-inputurl");
         argsList.add("-outputurl");
         for (int i = 0; i < args.length; i++) {
             String arg = args[i].toLowerCase();
             String errorMessage;
-            if (arg.equals("-minpmi")) {
-                errorMessage = "Missing minimum pmi\n";
-                try{
-                    if(argsList.contains(args[i+1])){
-                        printErrorAndExit(errorMessage);
-                    }
-                    try{
-                        minPmi = Double.parseDouble(args[i+1]);
-                    } catch (NumberFormatException e2){
-                        System.out.println();
-                        printErrorAndExit("Invalid minimum pmi\n");
-                    }
-                    if(minPmi <= 0) {
-                        System.out.println();
-                        printErrorAndExit("Invalid minimum pmi\n");
-                    }
-                    i++;
-                    continue;
-                } catch (IndexOutOfBoundsException e){
-                    System.out.println();
-                    printErrorAndExit(errorMessage);
-                }
-            }
             if (arg.equals("-inputurl")) {
                 errorMessage = "Missing input url\n";
                 try{
@@ -176,10 +137,6 @@ public class Step3 {
                     printErrorAndExit(errorMessage);
                 }
             }
-        }
-
-        if(minPmi == null){
-            printErrorAndExit("Argument for minimum pmi not found\n");
         }
         if(inputPath == null){
             printErrorAndExit("Argument for input url not found\n");
